src/tests/snapshots/cargo_vet__tests__certify__mock_trust_flow_ambiguous.snap
---
source: src/tests/certify.rs
expression: "format!(\"{error:?}\")"
---

  × The package 'third-party1' has multiple known publishers, please
  │ explicitly specify which publisher to trust

